[gd_scene load_steps=21 format=2]

[ext_resource path="res://Managing/Colliders/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Managing/Colliders/PlayerDetection.tscn" type="PackedScene" id=2]
[ext_resource path="res://Managing/Colliders/SoftCollision.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/Enemies/Bandit/Bomber/Drone.gd" type="Script" id=4]
[ext_resource path="res://RadialGradient.png" type="Texture" id=6]
[ext_resource path="res://Entities/Enemies/Bandit/Bomber/BomberDrone.png" type="Texture" id=7]
[ext_resource path="res://Entities/Enemies/Assets/HealthBarEmpty.png" type="Texture" id=8]
[ext_resource path="res://Entities/Enemies/Assets/HealthBarFull.png" type="Texture" id=9]
[ext_resource path="res://Managing/MoneyDropper.gd" type="Script" id=10]
[ext_resource path="res://Entities/DamageManager.tscn" type="PackedScene" id=11]
[ext_resource path="res://Managing/SoundManager.gd" type="Script" id=12]
[ext_resource path="res://Entities/Enemies/MachineHurt.wav" type="AudioStream" id=13]
[ext_resource path="res://Entities/Enemies/Bandit/Bomber/BomberDroneCorpse.png" type="Texture" id=14]
[ext_resource path="res://Entities/Effects/RobotSparks/RobotSparks.tscn" type="PackedScene" id=15]
[ext_resource path="res://Entities/Enemies/MiniDeathMachine/SpinnerBlade.wav" type="AudioStream" id=16]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[sub_resource type="CircleShape2D" id=3]
radius = 112.004

[sub_resource type="CircleShape2D" id=4]
radius = 4.0

[sub_resource type="CircleShape2D" id=5]
radius = 2.0

[sub_resource type="Animation" id=6]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Drone" type="KinematicBody2D" groups=["MDM"]]
collision_layer = 0
collision_mask = 33
script = ExtResource( 4 )
speed = 75.0
accel = 320.0
friction = 320.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 7 )
hframes = 2
frame = 1

[node name="Eye1" type="Light2D" parent="Sprite"]
position = Vector2( -1, 0 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )
texture_scale = 0.03
color = Color( 1, 0, 0, 1 )

[node name="Collisions" type="Node2D" parent="."]

[node name="Hurtbox" parent="Collisions" instance=ExtResource( 1 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Collisions/Hurtbox" index="0"]
shape = SubResource( 1 )

[node name="PlayerDetection" parent="Collisions" instance=ExtResource( 2 )]
visible = false

[node name="CollisionShape2D" parent="Collisions/PlayerDetection" index="0"]
shape = SubResource( 3 )

[node name="SoftCollision" parent="Collisions" instance=ExtResource( 3 )]
visible = false

[node name="CollisionShape2D" parent="Collisions/SoftCollision" index="0"]
shape = SubResource( 4 )

[node name="BounceRay" type="RayCast2D" parent="Collisions"]
visible = false
enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 5 )

[node name="MoneyDropper" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="DamageManager" parent="." instance=ExtResource( 11 )]
maxHealth = 45
hurtSFXPath = NodePath("../HitSFX")
difficulty = 0
corpseSprites = [ ExtResource( 14 ) ]
spritePath = NodePath("../Sprite")
deathParticles = ExtResource( 15 )

[node name="HitSFX" type="Node2D" parent="."]
script = ExtResource( 12 )
audio = ExtResource( 13 )
volumeMod = 5.0
bus = "SFX"

[node name="SawSFX" type="Node2D" parent="."]
script = ExtResource( 12 )
audio = ExtResource( 16 )
directional = true
pitchShiftRange = 2.0
autoplay = true
loop = true
attenuation = 1.0
maxDist = 120.0
bus = "Reverb"

[node name="Timers" type="Node" parent="."]

[node name="WanderTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="AttackTimer" type="Timer" parent="Timers"]
wait_time = 2.0
autostart = true

[node name="Healthbar" type="TextureProgress" parent="."]
margin_left = -9.0
margin_top = -15.0
margin_right = 9.0
margin_bottom = -10.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Default"
anims/Default = SubResource( 6 )

[connection signal="death" from="." to="MoneyDropper" method="drop_money"]
[connection signal="hurt" from="Collisions/Hurtbox" to="DamageManager" method="take_damage"]
[connection signal="timeout" from="Timers/WanderTimer" to="." method="_on_wander_timer_timeout"]
[connection signal="timeout" from="Timers/AttackTimer" to="." method="attack"]

[editable path="Collisions/Hurtbox"]
[editable path="Collisions/PlayerDetection"]
[editable path="Collisions/SoftCollision"]
